2017-02-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/interpol.c (do_cubic) docs/gnuplot.doc:  Document that smooth
	options (splines and bezier variants) are sensitive to blank lines and
	undefined values in the input data. Curves are fit separately to each
	uninterrupted subset of the original data. Curve segments that are 
	entirely out of range on x are now ignored rather than triggering a
	error message.
	Bug #1911

	* src/gadgets.c src/save.c src/show.c: save/show style arrow was
	showing incorrect settings for head/heads/backhead, and reporting
	LT_DEFAULT as an actual line type.

2017-02-21  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm term/write_png_image.c:  Backport svg terminal from 5.1.
	Generated bitmap images are embedded rather than being stored as
	external *.png files.  This version contains support for the "domterm"
	terminal emulator (http://domterm.org) that can display svg graphics
	in-line.

2017-02-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary) src/plot2d.c (get_data):
	Version 5 intentionally returns input data with a flag UNDEFINED rather
	than skipping the point altogether. Unfortunately the binary data input
	path failed to clear/initialize/set-to-NaN the value returned from
	function evaluation during binary data input. Now we explicitly set NaN
	in additional to returning DF_UNDEFINED.
	This fix is incomplete because store2d_point() later overwrites the 
	UNDEFINED flag, which is almost certainly the wrong thing to do.
	Bug #1911

2017-02-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (arrow_use_properties): If an arrowstyle has no explicit
	linetype or color, apply the current plot linecolor. This prevents 3D
	vector plots with a default linetype from being colored as if they
	were "lc palette z".
	Bug #1869

	* src/hidden3d.c:  Arrowhead properties were being applied as each plot
	was set up. This doesn't work in hidden3d mode because arrows from 