@@ -1,3 +1,8 @@
+2017-02-25  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* src/win/mingw/Makefile:  Optionally use pkg-config to use gdlib.
+	Required with recent updates of MSYS2/Mingw-w64
+
 2017-02-24  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/interpol.c (do_cubic) docs/gnuplot.doc:  Document that smooth
@@ -173,6 +178,12 @@
 	was included in Windows 3(!) for backward compatibility with earlier
 	versions and is no longer supported by some printer drivers.  Detect
 	that and display an error message.
+
+	* src/win/wgraph.c src/win/wgdiplus.cpp|h (InitFont_gdiplus):
+	Determine initial font metrics etc. using the correct API (GDI/GDI+)
+	for no-enhanced text instead of always using GDI.  Take actual canvas
+	size into account.  Note that version 5.0 still uses GDI to draw
+	enhanced text.
 
 2017-01-02  Jun Takimoto <takimoto-j@kba.biglobe.ne.jp>
 
